<style>
	div.uv-install-wrapper h3, div.uv-install-wrapper h4, div.uv-install-wrapper p, div.uv-install-wrapper hr, div.uv-install-wrapper ul { margin-bottom: 0.5em; }
	div.uv-install-wrapper ul { padding-left: 2em; }
</style>
<div class="uv-install-wrapper">
	<h2>CloudFlareClearCache Modules Extension for DNN</h2>
	<p>This DNN module allows site owners to delegate the ability for authorized end-users to purge the website cache at CloudFlare.</p>

	<p>Version 01.00.00</p>
	<ul>
		<li>First release.</li>
	</ul>
</div>