@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <dotnetnuke type="Package" version="6.0">
   <packages>
-    <package name="Upendo.Modules.CloudFlareClearCache_Symbols" type="Library" version="01.00.00">
+    <package name="Upendo.Modules.CloudFlareClearCache_Symbols" type="Library" version="01.00.01">
       <friendlyName>CloudFlareClearCache Module Symbols</friendlyName>
       <description><![CDATA[Allows authorized end-users to clear the cache in CloudFlare.]]></description>
       <owner>
@@ -14,7 +14,7 @@
       <releaseNotes src="ReleaseNotes.txt" />
       <azureCompatible>True</azureCompatible>
       <dependencies>
-        <dependency type="managedPackage" version="1.0.0">Upendo.Modules.CloudFlareClearCache</dependency>
+        <dependency type="managedPackage" version="1.0.1">Upendo.Modules.CloudFlareClearCache</dependency>
       </dependencies>
       <components>
         <component type="ResourceFile">
